--- a/canvas5sin.html
+++ b/canvas5sin.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>My Canvas</title>
+  <title>Canvas triangle 5center</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
