--- a/canvas_spray.html
+++ b/canvas_spray.html
@@ -11,21 +11,23 @@ var maskType = "none";//マスクの種類(circle/rect/triangle/none)
 var mx1, my1, mx2, my2, mr;//マスクの座標、半径
 
 function init(){
-canvas = document.getElementById("image");//描画用キャンバスのID(176秒)
+	//キャンバスの取得
+canvas = document.getElementById("image");//描画用キャンバスのID(176行)
 context = canvas.getContext("2d"),
 canvasMask = document.getElementById("mask");//マスク用キャンバスのID(177行)
 contextMask = canvasMask.getContext("2d");
 canvasRect = canvas.getBoundingClientRect();//描画用キャンバスの矩形情報を取得
-
+//キャンバスの初期化
 initCanvas();
 }
-
 
 function initCanvas () {
 
 context.fillStyle = "#FFFFFF";//塗りつぶしの色は白
 context.fillRect(0, 0, canvas.width, canvas.height);//描画用キャンバスの横幅、高さ
+//マスク用キャンバスのクリア
 clearMask();
+}
 
 function clearMask(){
 //マスク用キャンバスのクリア
@@ -42,7 +44,6 @@ var y = event.clientY - canvasRect.top;
 if (document.getElementById("spray").checked){//「スプレー」が選択されている時
 drawSpray (x, y);
 } else {
-
 mx1=x;
 my1=y;
 }
@@ -61,7 +62,6 @@ function draw(event){
 		my2=y;
 		drawMask();
 		}
-		}
 	}
 }
 
@@ -73,25 +73,23 @@ function drawSpray(x,y){
 	if(maskType=="circle"){
 		context.arc(mx1,my1,mr,0,Math.PI*2);//円形のパスを作成
 	} else if (maskType=="rect"){
-		context.rect(mx1,my1,mx2-mx1,my2-my1)//矩形のパスを作成
+		context.rect(mx1,my1,mx2-mx1,my2-my1);//矩形のパスを作成
 	} else if(maskType=="triangle"){
 		context.moveTo(mx1,my1);//三角形のパスを作成
 		context.lineTo(mx2,my2);
 		context.lineTo(2*mx1-mx2,my2);
 	}
 	context.closePath();//パスを閉じる
-	context.clip("evenodd")//パスをクリッピング領域に変換
+	context.clip("evenodd");//パスをクリッピング領域に変換
 	//サイズ、色の取得
 	var size=document.getElementById("size").value;//「半径」調整スライダーのID(173行)
 	var color=document.getElementById("color").value;//スプレーの色選択フォームのID(172行)
-
 	var r=parseInt(color.substring(1,3),16);//色の値をRGBに分解
 	var g=parseInt(color.substring(3,5),16);
 	var b=parseInt(color.substring(5,7),16);
 	var a=document.getElementById("a").value;//「濃さ」調整スライダーのID(174行)
 	//スプレーの描画
 	var grad=context.createRadialGradient(x,y,1,x,y,size);
-
 	grad.addColorStop(0.0,"rgba("+r+","+g+","+b+","+a+")");
 	grad.addColorStop(0.6,"rgba("+r+","+g+","+b+",0.1)");
 	grad.addColorStop(1.0,"rgba("+r+","+g+","+b+",0)");
@@ -100,7 +98,6 @@ function drawSpray(x,y){
 	context.arc(x,y,size,0,Math.PI*2);//指定したグラデーションで円を描く
 	context.fill();
 	context.restore();//描画用キャンバスを元に戻す
-
 }
 
 function drawMask(){
@@ -113,7 +110,7 @@ function drawMask(){
 		maskType="circle";
 		mr=Math.sqrt(Math.pow(mx1-mx2,2)+Math.pow(my1-my2,2));//半径を計算
 		contextMask.arc(mx1,my1,mr,0,Math.PI*2);
-	} else if(document.getElementById("m_triangle").checked){//「マスク(矩形)」が選択されている時
+	} else if(document.getElementById("m_rect").checked){//「マスク(矩形)」が選択されている時
 		//線1
 		maskType="rect";
 		contextMask.rect(mx1,my1,mx2-mx1,my2-my1);
@@ -121,7 +118,7 @@ function drawMask(){
 		//線2
 		maskType="triangle";
 		contextMask.moveTo(mx1,my1);
-		contexMask.lineTo(mx2,my2);
+		contextMask.lineTo(mx2,my2);
 		contextMask.lineTo(2*mx1-mx2,my2);
 	}
 	contextMask.closePath();
